<resources>
    <string name="app_name">PrepApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Subject">Subject</string>
    <string name="Classroom">Classroom</string>
    <string name="Notification">Notification</string>
    <string name="Setting">Setting</string>
    <string name="question_content">Question content</string>
    <string name="question_id">Question ID</string>
    <string name="answer_a">A. %s</string>
    <string name="answer_b">B. %s</string>
    <string name="answer_c">C. %s</string>
    <string name="answer_d">D. %s</string>
    <string name="cannot_find_question">Cannot find question with id %d in subject with id %d</string>
    <string name="id_with_value">ID: %d</string>
    <string name="confirm_delete_question_message">Are you sure you want to delete question with id: %d</string>
</resources>